--- a/Censo_Alumbrado.html
+++ b/Censo_Alumbrado.html
@@ -49,9 +49,8 @@
             
             <div class="flex items-center justify-between relative">
                 
-                <div class="w-12 h-12 flex items-center justify-center bg-white rounded-lg p-2 shadow-md z-10">
-                    <img src="https://i.imgur.com/i2yhcZU.png" alt="Logo" class="w-12 h-12 object-contain p-1 bg-white rounded-lg shadow-md z-10" />
-                </div>
+                <img src="https://i.imgur.com/i2yhcZU.png" alt="Logo" class="w-12 h-12 object-contain z-10" />
+
                 <h1 class="text-2xl sm:text-3xl font-extrabold text-white absolute inset-x-0 text-center pb-2 pointer-events-none">
                     Censo Digital de Alumbrado Público
                 </h1>
